feat - Added a tool to read terminal output (#595)